src/test/deca/syntax/valid/created/commentaire_entre_deux.deca
{
	int a = 0;
	// OCROGJEROGJREOK
	int b = 0;
	/**
	fdsfsdfsd
	*/
	int c = 0;
}
