src/test/deca/syntax/invalid/created/faux24.deca
{

	int b = 22/true;
}
